issue #752: Enable collapse feature for all issues + remove more button + replace collapse icons

--- a/src/components/Collapse/Collapse.module.css
+++ b/src/components/Collapse/Collapse.module.css
@@ -8,8 +8,11 @@
   z-index: 1;
 }
 
+.Collapse .icon:hover svg {
+  color: var(--bs-accent);
+}
+
 .Collapse .collapse-box {
   overflow: hidden;
   transition: height 0.3s ease-in-out;
-  padding-top: 2rem; /* Because of the new tag at the top of articles */
 }
